# Plasma

./: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
.github/actions/create-universal-binaries/: action.yaml  index.js  package-lock.json  package.json  rollup.config.js
.github/actions/create-universal-binaries/src/: index.js
.github/workflows/: ci.yml  linux-ci.yml
Scripts/Ports/openssl/: portfile.cmake
Scripts/Ports/python3/: portfile.cmake
Scripts/Python/: xOptionsMenu.py
Scripts/Triplets/: x64-osx.cmake
Sources/Plasma/Apps/plClient/: CMakeLists.txt  plClient.cpp  plClient.h  plEventQueue.cpp  plEventQueue.h
Sources/Plasma/Apps/plClient/Apple-SwiftUI/: PlasmaApp.swift
Sources/Plasma/Apps/plClient/Mac-Cocoa/: PLSKeyboardEventMonitor.h  PLSKeyboardEventMonitor.mm  PLSLoginWindowController.mm  PLSLoginWindowController.xib  PLSRenderLoop.h  PLSRenderLoop.m  PLSView.h  PLSView.mm  main.mm  plMacDisplayHelper.h  plMacDisplayHelper.mm
Sources/Plasma/Apps/plClient/OSX/: Info.plist.in  MainMenu.xib  PLSKeyboardEventMonitor.mm  PLSLoginWindowController.h  PLSLoginWindowController.mm  PLSPatcher.mm  PLSPatcherWindowController.mm  PLSServerStatus.mm  PLSView.mm  main.mm
Sources/Plasma/Apps/plClient/win32/: winmain.cpp
Sources/Plasma/CoreLib/: CMakeLists.txt  HeadSpin.cpp  HeadSpin_Mac.mm  hsIniHelper.cpp  hsIniHelper.h  plFileSystem.cpp
Sources/Plasma/FeatureLib/: CMakeLists.txt
Sources/Plasma/FeatureLib/inc/: pfAllCreatables.h
Sources/Plasma/FeatureLib/pfConsole/: pfConsoleCommands.cpp
Sources/Plasma/FeatureLib/pfDXPipeline/: plDXPipeline.cpp
Sources/Plasma/FeatureLib/pfMetalPipeline/: CMakeLists.txt  plMetalDeviceRef.h  plMetalMaterialShaderRef.cpp  plMetalMaterialShaderRef.h  plMetalPipeline.cpp  plMetalPipeline.h  plMetalPipeline.mm  plMetalPipelineState.h  plMetalTextFont.cpp
Sources/Plasma/FeatureLib/pfMetalPipeline/ShaderSrc/: FixedPipelineShaders.metal  ShaderTypes.h  Skinning.metal  TextFontShader.metal
Sources/Plasma/FeatureLib/pfPasswordStore/: CMakeLists.txt  pfPasswordStore_Apple.cpp
Sources/Plasma/FeatureLib/pfPython/: cyPythonInterface.cpp  cyPythonInterface.h
Sources/Plasma/FeatureLib/pfVulkanPipeline/: CMakeLists.txt  pfVulkanPipelineCreatable.h  plVulkanDevice.cpp  plVulkanDevice.h  plVulkanDeviceRef.h  plVulkanDeviceRefs.cpp  plVulkanEnumerate.cpp  plVulkanFragmentShader.cpp  plVulkanFragmentShader.h  plVulkanMaterialShaderRef.cpp  plVulkanMaterialShaderRef.h  plVulkanPipeline.cpp  plVulkanPipeline.h  plVulkanPipelineState.cpp  plVulkanPipelineState.h  plVulkanPlateManager.cpp  plVulkanPlateManager.h  plVulkanShader.cpp  plVulkanShader.h  plVulkanTextFont.cpp  plVulkanTextFont.h  plVulkanVertexShader.cpp  plVulkanVertexShader.h
Sources/Plasma/FeatureLib/pfVulkanPipeline/ShaderSrc/: FixedPipelineShaders.glsl  ShaderTypes.h  ShaderVertex.h
Sources/Plasma/NucleusLib/inc/: plCreatableIndex.h  plPipeline.h
Sources/Plasma/NucleusLib/pnAsyncCore/Private/: pnAcThread.h
Sources/Plasma/NucleusLib/pnAsyncCoreExe/: pnAceThread.cpp
Sources/Plasma/NucleusLib/pnInputCore/: plInputMap.cpp  plKeyDef.h
Sources/Plasma/NucleusLib/pnUUID/: CMakeLists.txt
Sources/Plasma/PubUtilLib/plAudio/: plAudioSystem.cpp
Sources/Plasma/PubUtilLib/plGImage/: plMipmap.cpp
Sources/Plasma/PubUtilLib/plInputCore/: plInputDevice.cpp
Sources/Plasma/PubUtilLib/plNetClientComm/: plNetClientComm.cpp  plNetClientComm.h
Sources/Plasma/PubUtilLib/plPipeline/: CMakeLists.txt  plDTProgressMgr.cpp  plDebugText.cpp  plDebugText.h  plTextFont.cpp  plTextFont.h
Sources/Plasma/PubUtilLib/plSurface/: hsGMaterial.cpp
Sources/Tests/CoreTests/: test_hsIniHelper.cpp
Sources/Tests/FeatureTests/pfPasswordStoreTest/: CMakeLists.txt  test_pfPasswordStore.cpp
Sources/Tools/plFilePatcher/: main.cpp
Sources/Tools/plPythonPack/: PythonInterface.cpp  PythonInterface.h
